# vaexcore-pulse

./: .mise.toml  .prettierignore  README.md  justfile  osv-scanner.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml
apps/desktopapp/: package.json
apps/desktopapp/src/: App.tsx  AppRoot.tsx  DesktopApp.tsx  app.css
apps/desktopapp/src-tauri/: Cargo.toml  deny.toml
apps/desktopapp/src-tauri/src/: app_menu.rs  lib.rs  local_services.rs  media_preview.rs  platform_paths.rs  studio_discovery.rs  suite_protocol.rs  suite_runtime.rs
apps/desktopapp/src-tauri/src/local_services/: helpers.rs  process.rs  runtime.rs
apps/desktopapp/src-tauri/src/media_preview/: cache.rs  inspection.rs  open_media.rs  preview_clip.rs
apps/desktopapp/src-tauri/src/suite_runtime/: commands.rs  discovery.rs  discovery_validation.rs  tests.rs  types.rs
apps/mobileapp/src/: App.tsx
apps/webapp/: package.json
apps/webapp/src/: App.tsx
docs/: OPERATOR_WORKFLOWS.md  SUITE_PROTOCOL.md  WINDOWS.md  analyzer-pipeline.md  api.md  desktopapp.md  repo-map.md  storage.md  verification.md
scripts/: analyze-build.mjs  audit-maintainability.mjs  check-service-bundle.mjs  maintainability.config.json  smoke-studio-handoff-review-export.ts
scripts/contracts/: shared-types-exports.txt  tauri-commands.txt
scripts/smoke-support/: studioHandoffFixtures.ts  studioReviewExportAssertions.ts
scripts/support/: audit-desktop-cycles.mjs  audit-public-contracts.mjs
services/analyzer/tests/: test_cli.py
services/api/: package.json
(+124 files in other folders)
