[package]
name = "vaexcore-pulse"
version = "0.2.0"
description = "Local-first highlight scouting shell for vaexcore pulse"
authors = ["Jason Marshall"]
edition = "2021"

[lib]
name = "vaexcore_pulse"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-dialog = "2.7.1"
